--- a/tables/cor_matrix.tex
+++ b/tables/cor_matrix.tex
@@ -4,16 +4,16 @@
 \centering
 \begin{tabu} to \linewidth {>{\raggedright}X>{\raggedleft}X>{\raggedleft}X>{\raggedleft}X>{\raggedleft}X>{\raggedleft}X>{\raggedleft}X>{\raggedleft}X}
 \toprule
-  & ASC: SRC & ASC: AC & Returns & Returns variability & Min. useful lifet. & PES & No greening\\
+  & ASC: SRC & ASC: AC & Returns & Returns variability & Min. useful lifet. & Agi-env. payments & No greening\\
 \midrule
-ASC: SRC & 0.01 & -0.45 & 0.51 & 0.29 & 0.46 & 0.26 & 0.57\\
-ASC: AC & -0.45 & 1.76 & 0.08 & 0.11 & -0.08 & 0.09 & -0.34\\
-Returns & 0.51 & 0.08 & 1.22 & 0.88 & 0.67 & -0.05 & 0.25\\
-Returns variability & 0.29 & 0.11 & 0.88 & 0.33 & 0.75 & -0.43 & -0.12\\
-Min. useful lifet. & 0.46 & -0.08 & 0.67 & 0.75 & 1.11 & -0.11 & -0.14\\
+ASC: SRC & 0.01 & -0.23 & 0.27 & 0.17 & 0.47 & 0.17 & 0.55\\
+ASC: AC & -0.23 & 2.19 & -0.28 & -0.30 & -0.30 & 0.38 & -0.28\\
+Returns & 0.27 & -0.28 & 3.76 & 0.89 & -0.01 & -0.45 & 0.10\\
+Returns variability & 0.17 & -0.30 & 0.89 & 5.45 & 0.01 & -0.30 & -0.20\\
+Min. useful lifet. & 0.47 & -0.30 & -0.01 & 0.01 & 0.94 & -0.04 & 0.15\\
 \addlinespace
-PES & 0.26 & 0.09 & -0.05 & -0.43 & -0.11 & 0.10 & 0.23\\
-No greening & 0.57 & -0.34 & 0.25 & -0.12 & -0.14 & 0.23 & 0.28\\
+Agi-env. payments & 0.17 & 0.38 & -0.45 & -0.30 & -0.04 & 0.11 & 0.02\\
+No greening & 0.55 & -0.28 & 0.10 & -0.20 & 0.15 & 0.02 & 0.37\\
 \bottomrule
 \end{tabu}
 \end{table}
