--- a/tables/sim_scenarios.tex
+++ b/tables/sim_scenarios.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!h]
 
 \caption{\label{tab:des_sim_scenarios}Description of the simulation scenarios and corresponding attribute values.}
 \centering
@@ -7,7 +7,7 @@
 \toprule
 \multicolumn{1}{c}{ } & \multicolumn{5}{c}{Alley-Cropping} & \multicolumn{5}{c}{Short Rotation Coppice} & \multicolumn{5}{c}{Status Quo} \\
 \cmidrule(l{3pt}r{3pt}){2-6} \cmidrule(l{3pt}r{3pt}){7-11} \cmidrule(l{3pt}r{3pt}){12-16}
-Scenario & MC & MC V & MU L & PE S & Gre-en & MC & MC V & MU L & PE S & Gre-en & MC & MC V & MU L & PE S & Gre-en\\
+Scenario & MC & MC V & MU L & AE P & Gre-en & MC & MC V & MU L & AE P & Gre-en & MC & MC V & MU L & AE P & Gre-en\\
 \midrule
 1. Regular-case & 400 & 30.0 & 24 & 0 & No & 400 & 30.0 & 24 & 0 & No & 400 & 15 & 3 & 0 & No\\
 2. Regular-case w/ policy support & 400 & 30.0 & 24 & 200 & Yes & 400 & 30.0 & 24 & 200 & Yes & 400 & 15 & 3 & 0 & No\\
@@ -16,7 +16,7 @@ Scenario & MC & MC V & MU L & PE S & Gre-en & MC & MC V & MU L & PE S & Gre-en &
 5. Best-case for agroforestry & 800 & 15.0 & 16 & 200 & Yes & 800 & 15.0 & 16 & 200 & Yes & 400 & 15 & 3 & 0 & No\\
 \bottomrule
 \multicolumn{16}{l}{\rule{0pt}{1em}\textit{Note:} MC = Margin contribution (Euro), MCV = margin contribution variation (\%), MUL = Minimum }\\
-\multicolumn{16}{l}{\rule{0pt}{1em}useful lifetime (years), PES = Payments for environmental services (Euro), Green = Cultivated}\\
+\multicolumn{16}{l}{\rule{0pt}{1em}useful lifetime (years), AEP = Agri-environmental payments (Euro), Green = Cultivated}\\
 \multicolumn{16}{l}{\rule{0pt}{1em}area eligible for greening premium}\\
 \end{tabu}
 \end{table}
