--- a/tables/sim_summary.tex
+++ b/tables/sim_summary.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[!h]
 
 \caption{\label{tab:des_weather_post_est}Description of the weather indicators as they enter the 2018-like shock simulations.}
 \centering
