--- a/tables/tab_descriptive.tex
+++ b/tables/tab_descriptive.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[H]
 
 \caption{\label{tab:descriptive_statistics}Sample description and comparison with the population mean.}
 \centering
@@ -15,8 +15,8 @@ Share of grassland (\%) & 34.07 & 30 & 22.9 & 34.37\textsuperscript{c}\\
 Share of forested land (\%) & 10.19 & 5 & 12.37 & --\\
 \addlinespace
 Share of rented land (\%) & 31.13 & 20 & 30.71 & 51.0\textsuperscript{c}\\
-Workforce (AWU\textsuperscript{a}) & 0.1 & 0 & 0.3 & 0.12\textsuperscript{c}\\
-Full-time farming (1 if yes, 0 otherwise) & 1.63 & 1.25 & 1.29 & 2.27\textsuperscript{c}\\
+Organic (1 if yes, 0 otherwise) & 0.1 & 0 & 0.3 & 0.12\textsuperscript{c}\\
+Workforce (AWU\textsuperscript{a}) & 1.63 & 1.25 & 1.29 & 2.27\textsuperscript{c}\\
 Farmer's age (years) & 48.34 & 50 & 12.42 & 50.3\textsuperscript{d}\\
 Higher education (1 if yes, 0 otherwise)\textsuperscript{b} & 0.24 & 0 & 0.43 & --\\
 \addlinespace
