--- a/tables/reg_table.tex
+++ b/tables/reg_table.tex
@@ -2,79 +2,78 @@
 \begin{table}
 \caption{Estimation results summary.}
 \begin{center}
-\begin{footnotesize}
+\begin{scriptsize}
 \sisetup{parse-numbers=false, table-text-alignment=right}
-\begin{tabular}{l S[table-format=5.13] S[table-format=5.13] S[table-format=5.13]}
+\begin{tabular}{l@{} S[table-format=5.13]@{} S[table-format=5.12]@{} S[table-format=5.13]@{} S[table-format=5.13]@{}}
 \toprule
- & {MNL} & {uncor. RPL} & {cor. RPL} \\
+ & {Model 1\hspace{0.07\textwidth}} & {Model 2\hspace{0.07\textwidth}} & {Model 3\hspace{0.07\textwidth}} & {Model 4\hspace{0.07\textwidth}} \\
 \midrule
-\textbf{Means}               &                         &                         &                         \\
-\quad ASC: SRC               & -1.52 \; (0.22)^{***}   & -3.82 \; (0.57)^{***}   & -3.52 \; (0.60)^{***}   \\
-\quad ASC: AC                & -0.98 \; (0.22)^{***}   & -2.04 \; (0.53)^{***}   & -0.89 \; (0.53)^{\circ} \\
-\quad Returns                & 0.00 \; (0.00)^{***}    & -4.87 \; (0.10)^{***}   & -4.80 \; (0.10)^{***}   \\
-\quad Returns variability    & -0.01 \; (0.00)^{*}     & -0.03 \; (0.01)^{**}    & -0.05 \; (0.01)^{***}   \\
-\quad Min. useful lifet.     & -0.04 \; (0.01)^{***}   & -0.22 \; (0.03)^{***}   & -0.26 \; (0.03)^{***}   \\
-\quad PES                    & 0.00 \; (0.00)^{***}    & 0.01 \; (0.00)^{***}    & 0.01 \; (0.00)^{***}    \\
-\quad No greening            & -0.09 \; (0.07)         & -0.64 \; (0.17)^{***}   & -0.25 \; (0.22)         \\
-\quad Rain 1-3:SRC           & 0.01 \; (0.00)^{*}      & 0.07 \; (0.01)^{***}    & 0.10 \; (0.02)^{***}    \\
-\quad Rain 1-3:AC            & 0.01 \; (0.00)^{*}      & 0.02 \; (0.01)^{*}      & 0.04 \; (0.01)^{***}    \\
-\quad Rain 4-10:SRC          & -0.02 \; (0.01)^{*}     & -0.20 \; (0.03)^{***}   & -0.09 \; (0.03)^{***}   \\
-\quad Rain 4-10:AC           & -0.01 \; (0.01)^{*}     & -0.06 \; (0.02)^{***}   & -0.02 \; (0.02)         \\
-\quad Temp. 1-3:SRC          & 1.17 \; (0.84)          & -5.44 \; (1.91)^{**}    & -9.36 \; (2.48)^{***}   \\
-\quad Temp. 1-3:AC           & -1.66 \; (0.67)^{*}     & -14.06 \; (2.02)^{***}  & -1.70 \; (1.96)         \\
-\quad Temp. 4-10:SRC         & -1.29 \; (0.86)         & 6.05 \; (1.95)^{**}     & 8.21 \; (2.54)^{**}     \\
-\quad Temp. 4-10:AC          & 1.80 \; (0.69)^{**}     & 14.25 \; (2.00)^{***}   & 1.33 \; (1.79)          \\
-\quad Dry days 1-3:SRC       & -0.05 \; (0.04)         & -0.30 \; (0.13)^{*}     & 0.69 \; (0.15)^{***}    \\
-\quad Dry days 1-3:AC        & -0.03 \; (0.04)         & 0.18 \; (0.10)^{\circ}  & -0.04 \; (0.11)         \\
-\quad Dry days 4-10:SRC      & -0.03 \; (0.05)         & -0.80 \; (0.18)^{***}   & -0.46 \; (0.20)^{*}     \\
-\quad Dry days 4-10:AC       & -0.09 \; (0.05)^{\circ} & -0.53 \; (0.12)^{***}   & -0.04 \; (0.12)         \\
-\quad Heavy rain 1-3:SRC     & 0.03 \; (0.16)          & -0.71 \; (0.38)^{\circ} & -2.87 \; (0.49)^{***}   \\
-\quad Heavy rain 1-3:AC      & 0.11 \; (0.13)          & -0.27 \; (0.34)         & 0.17 \; (0.35)          \\
-\quad Heavy rain 4-10:SRC    & 0.16 \; (0.23)          & 5.48 \; (0.92)^{***}    & 3.27 \; (0.96)^{***}    \\
-\quad Heavy rain 4-10:AC     & 0.02 \; (0.20)          & 2.34 \; (0.56)^{***}    & -0.74 \; (0.56)         \\
-\quad Hot days 1-3:SRC       & 0.01 \; (0.05)          & 0.88 \; (0.18)^{***}    & 0.70 \; (0.20)^{***}    \\
-\quad Hot days 1-3:AC        & 0.13 \; (0.04)^{**}     & 0.98 \; (0.16)^{***}    & -0.01 \; (0.15)         \\
-\quad Hot days 4-10:SRC      & -0.10 \; (0.11)         & -2.01 \; (0.36)^{***}   & -1.75 \; (0.40)^{***}   \\
-\quad Hot days 4-10:AC       & -0.18 \; (0.09)^{\circ} & -1.75 \; (0.30)^{***}   & 0.30 \; (0.29)          \\
-\textbf{Standard deviations} &                         &                         &                         \\
-\quad SD Rain 1-3:SRC        &                         & 0.06 \; (0.01)^{***}    & 0.05 \; (0.00)^{***}    \\
-\quad SD Rain 1-3:AC         &                         & 0.05 \; (0.00)^{***}    & 0.02 \; (0.00)^{***}    \\
-\quad SD Rain 4-10:SRC       &                         & 0.06 \; (0.00)^{***}    & 0.05 \; (0.00)^{***}    \\
-\quad SD Rain 4-10:AC        &                         & 0.05 \; (0.00)^{***}    & 0.02 \; (0.00)^{***}    \\
-\quad SD Temp. 1-3:SRC       &                         & 2.02 \; (0.57)^{***}    & -4.03 \; (0.58)^{***}   \\
-\quad SD Temp. 1-3:AC        &                         & 2.28 \; (0.44)^{***}    & -0.74 \; (0.48)         \\
-\quad SD Temp. 4-10:SRC      &                         & 0.02 \; (0.33)          & 1.77 \; (0.46)^{***}    \\
-\quad SD Temp. 4-10:AC       &                         & -0.81 \; (0.29)^{**}    & -4.44 \; (0.65)^{***}   \\
-\quad SD Dry days 1-3:SRC    &                         & 0.02 \; (0.04)          & 0.09 \; (0.04)^{*}      \\
-\quad SD Dry days 1-3:AC     &                         & 0.08 \; (0.02)^{**}     & 0.00 \; (0.04)          \\
-\quad SD Dry days 4-10:SRC   &                         & -0.02 \; (0.03)         & -0.20 \; (0.04)^{***}   \\
-\quad SD Dry days 4-10:AC    &                         & 0.12 \; (0.04)^{**}     & 0.22 \; (0.04)^{***}    \\
-\quad SD Heavy rain 1-3:SRC  &                         & 0.57 \; (0.14)^{***}    & 0.10 \; (0.18)          \\
-\quad SD Heavy rain 1-3:AC   &                         & -0.24 \; (0.15)         & -0.37 \; (0.20)^{\circ} \\
-\quad SD Heavy rain 4-10:SRC &                         & 0.08 \; (0.11)          & -0.08 \; (0.17)         \\
-\quad SD Heavy rain 4-10:AC  &                         & 0.11 \; (0.11)          & 0.17 \; (0.11)          \\
-\quad SD Hot days 1-3:SRC    &                         & 0.09 \; (0.05)          & -0.30 \; (0.06)^{***}   \\
-\quad SD Hot days 1-3:AC     &                         & -0.25 \; (0.04)^{***}   & -0.28 \; (0.04)^{***}   \\
-\quad SD Hot days 4-10:SRC   &                         & 0.50 \; (0.09)^{***}    & 0.47 \; (0.11)^{***}    \\
-\quad SD Hot days 4-10:AC    &                         & -0.78 \; (0.11)^{***}   & -0.57 \; (0.11)^{***}   \\
-\quad SD Returns             &                         & 1.08 \; (0.07)^{***}    & 1.22 \; (0.69)^{\circ}  \\
-\quad SD Returns variability &                         & 0.07 \; (0.01)^{***}    & 0.33 \; (0.57)          \\
-\quad SD Min. useful lifet.  &                         & 0.25 \; (0.02)^{***}    & 1.11 \; (0.07)^{***}    \\
-\quad SD AES                 &                         & 0.01 \; (0.00)^{***}    & 0.10 \; (0.02)^{***}    \\
-\quad SD No greening         &                         & 1.27 \; (0.20)^{***}    & 0.28 \; (0.03)^{***}    \\
-\quad SD ASC: SRC            &                         & -2.38 \; (0.32)^{***}   & 0.01 \; (0.00)^{***}    \\
-\quad SD ASC: AC             &                         & -0.33 \; (0.23)         & 1.76 \; (0.28)^{***}    \\
+\textbf{Means}               &                           &                             &                            &                             \\
+\quad ASC: SRC               & -1.52 \; (0.22)^{***}     & -3.93 \; (0.59)^{***}       & -3.77 \; (0.55)^{***}      & -4.01 \; (0.71)^{***}       \\
+\quad ASC: AC                & -0.98 \; (0.22)^{***}     & -2.13 \; (0.56)^{***}       & -2.16 \; (0.52)^{***}      & -1.63 \; (0.61)^{**}        \\
+\quad Returns                & 0.00 \; (0.00)^{***}      & -4.80 \; (0.09)^{***}       & -4.91 \; (0.10)^{***}      & -4.76 \; (0.11)^{***}       \\
+\quad Returns variability    & -0.01 \; (0.00)^{*}       & -0.02 \; (0.01)^{*}         & -0.03 \; (0.01)^{**}       & -0.03 \; (0.01)^{*}         \\
+\quad Min. useful lifet.     & -0.04 \; (0.01)^{***}     & -0.15 \; (0.03)^{***}       & -0.23 \; (0.03)^{***}      & -0.24 \; (0.03)^{***}       \\
+\quad Agri-env. payments     & 0.00 \; (0.00)^{***}      & 0.01 \; (0.00)^{***}        & 0.01 \; (0.00)^{***}       & 0.01 \; (0.00)^{***}        \\
+\quad No greening            & -0.09 \; (0.07)           & -0.47 \; (0.21)^{*}         & -0.67 \; (0.17)^{***}      & -0.48 \; (0.22)^{*}         \\
+\quad Rain 1-3:SRC           & 0.01 \; (0.00)^{*}        &                             & 0.06 \; (0.01)^{***}       & 0.08 \; (0.02)^{***}        \\
+\quad Rain 1-3:AC            & 0.01 \; (0.00)^{*}        &                             & -0.01 \; (0.01)            & 0.04 \; (0.01)^{***}        \\
+\quad Rain 4-10:SRC          & -0.02 \; (0.01)^{*}       &                             & -0.13 \; (0.03)^{***}      & -0.07 \; (0.03)^{*}         \\
+\quad Rain 4-10:AC           & -0.01 \; (0.01)^{*}       &                             & -0.04 \; (0.02)^{**}       & 0.08 \; (0.02)^{***}        \\
+\quad Temp. 1-3:SRC          & 1.17 \; (0.84)            &                             & -13.23 \; (2.11)^{***}     & -6.16 \; (2.22)^{**}        \\
+\quad Temp. 1-3:AC           & -1.66 \; (0.67)^{*}       &                             & -1.52 \; (1.56)            & 4.76 \; (1.87)^{*}          \\
+\quad Temp. 4-10:SRC         & -1.29 \; (0.86)           &                             & 11.76 \; (2.06)^{***}      & 1.43 \; (2.23)              \\
+\quad Temp. 4-10:AC          & 1.80 \; (0.69)^{**}       &                             & 2.19 \; (1.52)             & -8.05 \; (1.97)^{***}       \\
+\quad Dry days 1-3:SRC       & -0.05 \; (0.04)           &                             & 0.29 \; (0.13)^{*}         & 0.43 \; (0.15)^{**}         \\
+\quad Dry days 1-3:AC        & -0.03 \; (0.04)           &                             & -0.20 \; (0.10)^{*}        & -0.17 \; (0.12)             \\
+\quad Dry days 4-10:SRC      & -0.03 \; (0.05)           &                             & -0.61 \; (0.18)^{**}       & 0.08 \; (0.22)              \\
+\quad Dry days 4-10:AC       & -0.09 \; (0.05)^{\circ}   &                             & -0.38 \; (0.11)^{***}      & 0.80 \; (0.15)^{***}        \\
+\quad Heavy rain 1-3:SRC     & 0.03 \; (0.16)            &                             & -1.47 \; (0.38)^{***}      & -1.04 \; (0.45)^{*}         \\
+\quad Heavy rain 1-3:AC      & 0.11 \; (0.13)            &                             & 0.86 \; (0.32)^{**}        & 0.15 \; (0.36)              \\
+\quad Heavy rain 4-10:SRC    & 0.16 \; (0.23)            &                             & 5.19 \; (0.94)^{***}       & 2.91 \; (1.05)^{**}         \\
+\quad Heavy rain 4-10:AC     & 0.02 \; (0.20)            &                             & 1.36 \; (0.53)^{*}         & -4.36 \; (0.69)^{***}       \\
+\quad Hot days 1-3:SRC       & 0.01 \; (0.05)            &                             & 1.36 \; (0.20)^{***}       & 0.47 \; (0.18)^{**}         \\
+\quad Hot days 1-3:AC        & 0.13 \; (0.04)^{**}       &                             & 0.27 \; (0.12)^{*}         & -0.54 \; (0.15)^{***}       \\
+\quad Hot days 4-10:SRC      & -0.10 \; (0.11)           &                             & -2.45 \; (0.37)^{***}      & -0.15 \; (0.35)             \\
+\quad Hot days 4-10:AC       & -0.18 \; (0.09)^{\circ}   &                             & -0.28 \; (0.24)            & 1.80 \; (0.33)^{***}        \\
+\textbf{Standard deviations} &                           &                             &                            &                             \\
+\quad SD Rain 1-3:SRC        &                           &                             & 0.05 \; (0.00)^{***}       & 0.06 \; (0.01)^{***}        \\
+\quad SD Rain 1-3:AC         &                           &                             & 0.06 \; (0.00)^{***}       & 0.02 \; (0.00)^{***}        \\
+\quad SD Rain 4-10:SRC       &                           &                             & 0.05 \; (0.00)^{***}       & 0.03 \; (0.00)^{***}        \\
+\quad SD Rain 4-10:AC        &                           &                             & 0.04 \; (0.00)^{***}       & 0.02 \; (0.00)^{***}        \\
+\quad SD Temp. 1-3:SRC       &                           &                             & -0.57 \; (0.55)            & -2.87 \; (0.58)^{***}       \\
+\quad SD Temp. 1-3:AC        &                           &                             & -1.58 \; (0.50)^{**}       & 2.40 \; (0.52)^{***}        \\
+\quad SD Temp. 4-10:SRC      &                           &                             & -1.03 \; (0.64)            & 2.10 \; (0.47)^{***}        \\
+\quad SD Temp. 4-10:AC       &                           &                             & -0.17 \; (0.55)            & 3.11 \; (0.54)^{***}        \\
+\quad SD Dry days 1-3:SRC    &                           &                             & 0.16 \; (0.03)^{***}       & 0.08 \; (0.02)^{**}         \\
+\quad SD Dry days 1-3:AC     &                           &                             & 0.07 \; (0.03)^{*}         & -0.01 \; (0.04)             \\
+\quad SD Dry days 4-10:SRC   &                           &                             & -0.01 \; (0.04)            & -0.00 \; (0.04)             \\
+\quad SD Dry days 4-10:AC    &                           &                             & -0.10 \; (0.03)^{***}      & 0.06 \; (0.03)^{\circ}      \\
+\quad SD Heavy rain 1-3:SRC  &                           &                             & -1.30 \; (0.19)^{***}      & -0.04 \; (0.12)             \\
+\quad SD Heavy rain 1-3:AC   &                           &                             & -0.16 \; (0.15)            & 1.15 \; (0.20)^{***}        \\
+\quad SD Heavy rain 4-10:SRC &                           &                             & 0.16 \; (0.09)^{\circ}     & 0.26 \; (0.15)^{\circ}      \\
+\quad SD Heavy rain 4-10:AC  &                           &                             & 0.38 \; (0.08)^{***}       & -0.85 \; (0.14)^{***}       \\
+\quad SD Hot days 1-3:SRC    &                           &                             & 0.11 \; (0.06)^{\circ}     & 0.13 \; (0.06)^{*}          \\
+\quad SD Hot days 1-3:AC     &                           &                             & 0.38 \; (0.06)^{***}       & 0.04 \; (0.05)              \\
+\quad SD Hot days 4-10:SRC   &                           &                             & 0.82 \; (0.13)^{***}       & -0.54 \; (0.11)^{***}       \\
+\quad SD Hot days 4-10:AC    &                           &                             & -0.66 \; (0.10)^{***}      & -0.21 \; (0.10)^{*}         \\
+\quad SD Returns             &                           & 6.05 \; (0.76)^{***}        & 0.87 \; (0.06)^{***}       & 3.76 \; (0.79)^{***}        \\
+\quad SD Returns variability &                           & 6.24 \; (0.67)^{***}        & -0.04 \; (0.01)^{**}       & 5.45 \; (0.80)^{***}        \\
+\quad SD Min. useful lifet.  &                           & 1.06 \; (0.08)^{***}        & 0.25 \; (0.02)^{***}       & 0.94 \; (0.07)^{***}        \\
+\quad SD AES                 &                           & 0.03 \; (0.01)^{*}          & 0.01 \; (0.00)^{***}       & 0.11 \; (0.02)^{***}        \\
+\quad SD No greening         &                           & 0.23 \; (0.02)^{***}        & 1.10 \; (0.19)^{***}       & 0.37 \; (0.04)^{***}        \\
+\quad SD ASC: SRC            &                           & 0.01 \; (0.00)^{***}        & 1.38 \; (0.29)^{***}       & 0.01 \; (0.00)^{***}        \\
+\quad SD ASC: AC             &                           & 1.27 \; (0.29)^{***}        & 1.33 \; (0.33)^{***}       & 2.19 \; (0.33)^{***}        \\
 \midrule
-Correlation                  & {-}                     & {No}                    & {Yes}                   \\
-                             & { }                     & { }                     & { }                     \\
-logLik                       & -2156.04                & -1184.13                & -1155.21                \\
-Pseudo-R2                    & 0.09                    & 0.50                    & 0.51                    \\
-AIC                          & 4366.09                 & 2476.27                 & 2460.43                 \\
-Obs.                         & 2376.00                 & 2376.00                 & 2376.00                 \\
+Correlation                  & {-\hspace{0.1\textwidth}} & {Yes\hspace{0.1\textwidth}} & {No\hspace{0.1\textwidth}} & {Yes\hspace{0.1\textwidth}} \\
+                             & { }                       & { }                         & { }                        & { }                         \\
+logLik                       & -2156.04                  & -1178.94                    & -1180.95                   & -1146.09                    \\
+Pseudo-R2                    & 0.09                      & 0.50                        & 0.50                       & 0.52                        \\
+Obs.                         & 2376.00                   & 2376.00                     & 2376.00                    & 2376.00                     \\
 \bottomrule
-\multicolumn{4}{l}{\tiny{$^{***}p<0.001$; $^{**}p<0.01$; $^{*}p<0.05$; $^{\circ}p<0.1$}}
+\multicolumn{5}{l}{\tiny{$^{***}p<0.001$; $^{**}p<0.01$; $^{*}p<0.05$; $^{\circ}p<0.1$}}
 \end{tabular}
-\end{footnotesize}
+\end{scriptsize}
 \label{tab:estimation_results}
 \end{center}
 \end{table}
