--- a/tables/table_rob_lags.tex
+++ b/tables/table_rob_lags.tex
@@ -8,23 +8,29 @@
   & \textbf{Log Likelihood} & \textbf{McFadden Pseudo R2} & \textbf{Akaike Information Criterion}\\
 \midrule
 \textbf{Selected Model} short-term: 1-3 years,
-long-term: 4-10 years & -1155.21 & 0.51 & 2460.43\\
+long-term: 4-10 years & -1146.09 & 0.52 & 2442.19\\
 \addlinespace
-\textbf{Specification Alt. 1} short-term: 1 year, long-term: 2-10 years & -1389.99 & 0.41 & 2929.97\\
+\textbf{Specification Alt. 1} short-term: 1 year, long-term: 2-10 years & -1168.75 & 0.51 & 2487.49\\
 \addlinespace
-\textbf{Specification Alt. 2} short-term: 1 year, long-term: 2-15 years & -1176.99 & 0.50 & 2503.98\\
+\textbf{Specification Alt. 2} short-term: 1 year, long-term: 2-15 years & -1162.13 & 0.51 & 2474.25\\
 \addlinespace
-\textbf{Specification Alt. 3} short-term: 1 year, long-term: 2-20 years & -1400.24 & 0.41 & 2950.47\\
+\textbf{Specification Alt. 3} short-term: 1 year, long-term: 2-20 years & -1155.11 & 0.51 & 2460.23\\
 \addlinespace
-\textbf{Specification Alt. 4} short-term: 1-3 year, long-term: 4-15 years & -1238.40 & 0.48 & 2626.81\\
+\textbf{Specification Alt. 4} short-term: 1 year, long-term: 2-25 years & -1173.44 & 0.51 & 2496.88\\
 \addlinespace
-\textbf{Specification Alt. 5} short-term: 1-3 year, long-term: 4-20 years & -1382.27 & 0.42 & 2914.54\\
+\textbf{Specification Alt. 5} short-term: 1-3 year, long-term: 4-15 years & -1186.72 & 0.50 & 2523.44\\
 \addlinespace
-\textbf{Specification Alt. 6} short-term: 1-5 year, long-term: 6-10 years & -1411.71 & 0.40 & 2973.42\\
+\textbf{Specification Alt. 6} short-term: 1-3 year, long-term: 4-20 years & -1172.84 & 0.51 & 2495.67\\
 \addlinespace
-\textbf{Specification Alt. 7} short-term: 1-5 year, long-term: 6-15 years & -1398.10 & 0.41 & 2946.20\\
+\textbf{Specification Alt. 7} short-term: 1-3 year, long-term: 4-25 years & -1157.04 & 0.51 & 2464.07\\
 \addlinespace
-\textbf{Specification Alt. 8} short-term: 1-5 year, long-term: 6-20 years & -1405.48 & 0.41 & 2960.97\\
+\textbf{Specification Alt. 8} short-term: 1-5 year, long-term: 6-10 years & -1163.76 & 0.51 & 2477.53\\
+\addlinespace
+\textbf{Specification Alt. 9} short-term: 1-5 year, long-term: 6-15 years & -1164.72 & 0.51 & 2479.45\\
+\addlinespace
+\textbf{Specification Alt. 10} short-term: 1-5 year, long-term: 6-20 years & -1175.77 & 0.50 & 2501.54\\
+\addlinespace
+\textbf{Specification Alt. 11} short-term: 1-5 year, long-term: 6-25 years & -1162.20 & 0.51 & 2474.40\\
 \bottomrule
 \end{tabular}
 \end{table}
